gcc/testsuite/rust/rustc/ui/parser/item-needs-block_dg.rs
trait Trait;
// { dg-error "" "" { target *-*-* } .-1 }

impl Trait for ();
// { dg-error "" "" { target *-*-* } .-1 }

enum Enum;
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

